{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 111,
  "lineage": "3704284b-2563-01f6-c37b-a31e844ec533",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "my_private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:026090548711:route-table/rtb-021bb3e5669280440",
            "default_route_table_id": "rtb-021bb3e5669280440",
            "id": "rtb-021bb3e5669280440",
            "owner_id": "026090548711",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "day three private route table"
            },
            "tags_all": {
              "Name": "day three private route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e224890aa9c567cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.thirdworld"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:026090548711:internet-gateway/igw-0a1be482779748311",
            "id": "igw-0a1be482779748311",
            "owner_id": "026090548711",
            "tags": {
              "Name": "Day three public internet gateway"
            },
            "tags_all": {
              "Name": "Day three public internet gateway"
            },
            "vpc_id": "vpc-0e224890aa9c567cd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:026090548711:route-table/rtb-0ad0905d79c5db2fb",
            "id": "rtb-0ad0905d79c5db2fb",
            "owner_id": "026090548711",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a1be482779748311",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "day three public route table"
            },
            "tags_all": {
              "Name": "day three public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e224890aa9c567cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.thirdworld"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rtb_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030797e5f51a98e42",
            "route_table_id": "rtb-0ad0905d79c5db2fb",
            "subnet_id": "subnet-08bee881c6a15d956"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_public_rtb",
            "aws_subnet.mypublicsubnet",
            "aws_vpc.thirdworld",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00421ad2a8459f316",
            "route_table_id": "rtb-0ad0905d79c5db2fb",
            "subnet_id": "subnet-021f9b18ed1c3f958"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_public_rtb",
            "aws_subnet.mypublicsubnet",
            "aws_vpc.thirdworld",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023301f2462a15e31",
            "route_table_id": "rtb-0ad0905d79c5db2fb",
            "subnet_id": "subnet-0b8ef36e0d83363c9"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_public_rtb",
            "aws_subnet.mypublicsubnet",
            "aws_vpc.thirdworld",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myprivatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:026090548711:subnet/subnet-0ddee7b748cf4e604",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddee7b748cf4e604",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026090548711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-1"
            },
            "tags_all": {
              "Name": "private_subnet-1"
            },
            "vpc_id": "vpc-0e224890aa9c567cd"
          },
          "dependencies": [
            "aws_vpc.thirdworld",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:026090548711:subnet/subnet-0b18cb98789228a32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b18cb98789228a32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026090548711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-2"
            },
            "tags_all": {
              "Name": "private_subnet-2"
            },
            "vpc_id": "vpc-0e224890aa9c567cd"
          },
          "dependencies": [
            "aws_vpc.thirdworld",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:026090548711:subnet/subnet-05690b37e0a3624b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05690b37e0a3624b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026090548711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": " private_subnet-3"
            },
            "tags_all": {
              "Name": " private_subnet-3"
            },
            "vpc_id": "vpc-0e224890aa9c567cd"
          },
          "dependencies": [
            "aws_vpc.thirdworld",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mypublicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:026090548711:subnet/subnet-08bee881c6a15d956",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bee881c6a15d956",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026090548711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-1"
            },
            "tags_all": {
              "Name": "public_subnet-1"
            },
            "vpc_id": "vpc-0e224890aa9c567cd"
          },
          "dependencies": [
            "aws_vpc.thirdworld",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:026090548711:subnet/subnet-021f9b18ed1c3f958",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021f9b18ed1c3f958",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026090548711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-2"
            },
            "tags_all": {
              "Name": "public_subnet-2"
            },
            "vpc_id": "vpc-0e224890aa9c567cd"
          },
          "dependencies": [
            "aws_vpc.thirdworld",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:026090548711:subnet/subnet-0b8ef36e0d83363c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8ef36e0d83363c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026090548711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": " public_subnet-3"
            },
            "tags_all": {
              "Name": " public_subnet-3"
            },
            "vpc_id": "vpc-0e224890aa9c567cd"
          },
          "dependencies": [
            "aws_vpc.thirdworld",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "thirdworld",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:026090548711:vpc/vpc-0e224890aa9c567cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0110a3b0a553531b1",
            "default_route_table_id": "rtb-021bb3e5669280440",
            "default_security_group_id": "sg-001b78fdc51ad3d82",
            "dhcp_options_id": "dopt-0baa440b5cd2990f3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e224890aa9c567cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-021bb3e5669280440",
            "owner_id": "026090548711",
            "tags": {
              "Name": "welcome to Day Three VPC"
            },
            "tags_all": {
              "Name": "welcome to Day Three VPC"
            }
          }
        }
      ]
    }
  ]
}